More initial site setup

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
+    border-top: 5px solid $blue-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
@@ -17,10 +17,11 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
+    color: $blue-color;
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: $blue-color;
     }
 }
 
