--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,11 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
+$red-color: 			 #cf6766;
+$blue-color: 			 #30415d;
+$blue-color-dark:  #031424;
+$blue-color-light: #beaebd;
+
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
@@ -27,7 +32,6 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-
 
 
 // Use media queries like this:
