--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,37 +2,10 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <p>{{ site.copyright }}</p>
-        <!-- <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul> -->
+        <p>{{ site.copyright }} {{ 'now' | date: "%Y" }}</p>
       </div>
-
-      <div class="footer-col footer-col-2">
-        
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
 
   </div>
 
