--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,9 @@
 
   <div class="wrapper">
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <p>{{ site.copyright }} {{ 'now' | date: "%Y" }}</p>
-      </div>
+    <div class="col-md-12">
+        <p class="text-center text-muted">{{ site.copyright }} {{ 'now' | date: "%Y" }}</p>
+    </div>
 
   </div>
 
